--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "https://github.com/ibhuiyan17/spotify-ppp#readme",
   "dependencies": {
+    "cookie-parser": "1.3.2",
     "axios": "^0.18.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "cors": "^2.8.4",
+    "querystring": "~0.2.0",
+    "request": "~2.83.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
