--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   },
   "homepage": "https://github.com/ibhuiyan17/spotify-ppp#readme",
   "dependencies": {
-    "cookie-parser": "1.3.2",
     "axios": "^0.18.0",
-    "express": "^4.16.4",
+    "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
+    "express": "^4.16.4",
     "querystring": "~0.2.0",
-    "request": "~2.83.0"
+    "request": "~2.83.0",
+    "simple-statistics": "^7.0.2"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
