--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/ibhuiyan17/spotify-ppp#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "buckets-js": "^1.98.2",
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "express": "^4.16.4",
