--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "query-string": "^6.5.0",
+    "@material-ui/core": "^4.1.1",
+    "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
-    "redux": "^4.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,7 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "redux-devtools": "^3.5.0"
-  }
+  "devDependencies": {}
 }
