--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "express": "^4.17.1",
+    "nodemon": "^1.19.1",
     "querystring": "~0.2.0",
     "request": "~2.83.0",
     "simple-statistics": "^7.0.2"
