--- a/package.json
+++ b/package.json
@@ -1,28 +1,41 @@
 {
-  "name": "spotify-ppp",
+  "name": "spotify-ppm",
   "version": "1.0.0",
-  "description": "After analyzing a user's recently played songs, create a personalized playlist aimed to boost productivity.",
+  "description": "Allows users to generate new playlists out of seeds including tracks, artists, and genres.",
+  "engines": {
+    "node": "12.x"
+  },
   "main": "./server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server/server.js",
+    "build": "cd client/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ibhuiyan17/spotify-ppp.git"
+    "url": "git+https://github.com/ibhuiyan17/spotify-ppm.git"
   },
   "keywords": [
-    "spotify"
+    "spotify",
+    "playlist",
+    "node",
+    "react",
+    "express",
+    "material-ui",
+    "heroku"
   ],
   "author": "Ibtida Bhuiyan",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ibhuiyan17/spotify-ppp/issues"
+    "url": "https://github.com/ibhuiyan17/spotify-ppm/issues"
   },
-  "homepage": "https://github.com/ibhuiyan17/spotify-ppp#readme",
+  "homepage": "https://github.com/ibhuiyan17/spotify-ppm#readme",
   "dependencies": {
     "axios": "^0.19.0",
-    "buckets-js": "^1.98.2",
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "express": "^4.17.1",
