--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.x",
+    "npm": "6.9.0"
+  },
+  "cacheDirectories": [
+    "node_modules"
+  ],
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
@@ -20,7 +27,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001/",
   "eslintConfig": {
     "extends": "react-app"
   },
