--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Allows users to generate new playlists out of seeds including tracks, artists, and genres.",
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "6.9.0"
   },
   "main": "./server/server.js",
   "scripts": {
@@ -39,6 +40,7 @@
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "express": "^4.17.1",
+    "lodash.pick": "^4.4.0",
     "nodemon": "^1.19.1",
     "querystring": "~0.2.0",
     "request": "~2.83.0",
