--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
   "homepage": "https://github.com/ibhuiyan17/spotify-ppm#readme",
   "dependencies": {
     "axios": "^0.19.0",
-    "cookie-parser": "1.3.2",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.4",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "lodash.pick": "^4.4.0",
     "nodemon": "^1.19.1",
