--- a/server/package.json
+++ b/server/package.json
@@ -22,8 +22,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "cookie-parser": "1.3.2",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.4",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "lodash.pick": "^4.4.0",
     "nodemon": "^1.19.1",
