--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/ibhuiyan17/spotify-ppm/tree/master/server"
   },
   "author": "Ibtida Bhuiyan",
-  "license": "ISC",
+  "license": "AGPL-3.0-or-later",
   "dependencies": {
     "axios": "^0.19.0",
     "cookie-parser": "^1.4.4",
